@@ -1,4 +1,5 @@
 2017-12-19  Kirit Saelensminde  <kirit@felspar.com>
+ * Improve the converting nullable constructor so it uses explicit type conversions.
  * Make more string utilties compatible with `f5::u8view`, at the cost of wide character literals.
  * Make `nullable<f5::u8view>` coercions from JSON not throw errors if the value isn't a string.
 
